adding publications and formatting them

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@ notitle: true
 <!-- <p><a href="{{ site.base }}/oldnews.html">Older news posts&hellip;</a></p> -->
 <!-- {% endif %} -->
 
+
 <div class="inset-image pull-left">
   <img src="img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
                                                  img-responsive">
 </div>
-<h3 style="font-family: 'Noto Sans', Helvetica, Arial, sans-serif; color:#333"> I
-  am a PhD student at the University of Washington working
+<h3 style="font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
+           color:#333">I am a PhD student at the University of
+  Washington working
   with <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
   Levy</a>
   and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
@@ -40,27 +42,7 @@ notitle: true
   interest is primarily in computer systems, especially operating
   systems and distributed systems.
 </h3>
-
-<h3>Present</h3>
-<p>
-  Currently, my work focuses on two areas. First, I am designing new
-  operating system abstractions for mobile/cloud applications. The
-  applications that users interact with daily no longer run on a
-  single desktop computer, but instead span mobile devices and cloud
-  servers. Modern application programmers face significant development
-  challenges without the OS support that traditional desktop
-  applications benefit from. My work re-designs traditional OS
-  services for modern mobile/cloud applications.
-</p>
-<p>
-Second,
-  I am working on improving protocols for distributed transactional
-  storage systems by co-designing distributed protocols that are
-  traditionally implemented separately. Integrating these protocols
-  allows us to take advantage of cross-layer optimizations,
-  significantly improving performance and simplifying the protocols.
-</p>
-<h3>Past</h3>
+<br />
 <p>
   Before starting my PhD, I worked for three years
   at <a href="http://www.vmware.com/">VMware</a> in the
@@ -77,7 +59,7 @@ Second,
 	Kaashoek</a> in
   the <a href="http://pdos.csail.mit.edu">Parallel and
 	Distributed Operating Systems</a> group.</p>
-<h3>Personal</h3>
+
 <p>
   I was born in <a href="http://www.ebeijing.gov.cn/">Beijing,
 	China</a> and spent most of my time growing up
@@ -87,14 +69,4 @@ Second,
   science together.
 </p>
 
-<div>
-<h3>Contact</h3>
-<p>
-iyzhang@cs.washington.edu<br />
-irene@irenezhang.net<br /><br />
-185 Northeast Stevens Way<br />
-Seattle, WA  98195<br />
-CSE 591
-</p>
-</div>
 
