--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,8 @@ layout: default
 title: Publications
 ---
 <p>
-    <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
+    Generated from my <a href="{{ site.base }}/bib/pubs.bib">bibtex
+    file</a> with a cool tool called <a href="https://github.com/sampsyo/bibble">bibble</a>.
 </p>
 
 {% include pubs.html %}
