--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,11 @@ title: Publications
 
 {% include pubs.html %}
 
-<h2>Awards</h2>
-- NSF Fellowship
-- ARCS Fellowship
-- Jeff Dean and Heidi Hopper Endowed Fellowship
+<!-- <h2>Awards</h2> -->
+<!-- I am or have been generously funded by several fellowships. -->
+<!-- <ul> -->
+<!--   <li>NSF Fellowship</li> -->
+<!--   <li>ARCS Fellowship</li> -->
+<!--   <li>Jeff Dean and Heidi Hopper Endowed Fellowship</li> -->
+<!-- </ul> -->
+
