some formatting and typos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ notitle: true
 
 
 <div class="inset-image pull-left">
-  <img src="img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
+  <img src="{{ site.base }}/img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
                                                  img-responsive">
 </div>
 <h3 style="font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
