updating formatting and fixing some deployment bugs

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ notitle: true
 <!-- </ul> -->
 <!-- {% assign numposts = site.posts | size %} -->
 <!-- {% if numposts >= site.front_page_news %} -->
-<!-- <p><a href="{{ site.base }}/blog/">Older posts&hellip;</a></p> -->
+<!-- <p><a href="{{ site.baseurl }}/blog/">Older posts&hellip;</a></p> -->
 <!-- {% else %} -->
-<!-- <p><a href="{{ site.base }}/oldnews.html">Older news posts&hellip;</a></p> -->
+<!-- <p><a href="{{ site.baseurl }}/oldnews.html">Older news posts&hellip;</a></p> -->
 <!-- {% endif %} -->
 
 
 <div class="inset-image pull-left">
-  <img src="{{ site.base }}/img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
+  <img src="img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
                                                  img-responsive">
 </div>
 <h3 style="font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
@@ -51,14 +51,12 @@ notitle: true
 
 <p> I received my B.S. in computer science
   from <a href="http://www.mit.edu">MIT</a> in 2008 and my
-  M. Eng. in 2009. At MIT, I worked with 
+  M. Eng. in 2009. My master's thesis was advised by 
   <a href="http://pdos.csail.mit.edu/~strib/">Jeremy
 	Stribling</a>, <a href="http://pdos.csail.mit.edu/rtm/">Robert
 	Morris</a> and
   <a href="http://pdos.csail.mit.edu/~kaashoek/">Frans
-	Kaashoek</a> in
-  the <a href="http://pdos.csail.mit.edu">Parallel and
-	Distributed Operating Systems</a> group.</p>
+	Kaashoek</a>.</p>
 
 <p>
   I was born in <a href="http://www.ebeijing.gov.cn/">Beijing,
