--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@ layout: default
 title: Publications
 ---
 <p>
-    Generated from my <a href="{{ site.base }}/bib/pubs.bib">bibtex
+    Generated from my <a href="bib/pubs.bib">bibtex
     file</a> with a cool tool called <a href="https://github.com/sampsyo/bibble">bibble</a>.
 </p>
 
