--- a/research/index.html
+++ b/research/index.html
@@ -1,20 +1,20 @@
 ---
 layout: default
-title: Research Projects
+title: Current Research
 ---
 
 My current research focuses on operating systems and distributed
 systems for large-scale distributed applications. I am working on
 better transactional storage, flexible deployment and practical
-user-level I/O for these applications.
+user-level I/O for these types of applications.
 
 <h3>Optimistic Replicated Two-Phase Commit</h3>
 <p>
 Optimistic Replicated Two-Phase Commit (OR-2PC) is a new protocol
 integrating two-phase commit, replication and concurrency control. By
-taking advantage of <em>cross-protocol</em> optimizations, OR-2PC is able to
-commit transactions in a single round-trip with the same consistency
-guarantees and general transaction model as conventional
+taking advantage of <em>cross-protocol</em> optimizations, OR-2PC is
+able to commit transactions in a single round-trip with the same
+consistency guarantees and transaction model as conventional
 protocols.<br />
 <a href="{{ site.base }}/or-2pc/index.html">More about OR-2PC
   <i class="fa fa-chevron-circle-right"></i></a>
@@ -43,7 +43,8 @@ customizability.<br />
   <i class="fa fa-chevron-circle-right"></i></a>
 </p>
 
-<h2>Research Projects at VMware</h2>
+<hr />
+<h2>Previous Research at VMware</h2>
 <p>
 Before starting my PhD, I worked on several research projects at
 VMware. My primary focus was on improving the performance of restoring
@@ -63,7 +64,7 @@ VM performance on restore, as well as an implementation of working set
 restore for VMware Workstation.
 </p>
 
-<h2>Research Projects at MIT</h2>
+<h2>Previous Research at MIT</h2>
 <p>
 I worked on a number of research projects with great people while at
 MIT as an undergrad and MEng. Some notable projects that I worked on:
