--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@ notitle: true
 </h3>
 <br />
 <p>
+My current research focuses on systems for large-scale, distributed
+applications. I am working on several projects in this area, including
+a new protocol to provide high-performance transactions in distributed
+storage systems, and a flexible, distributed programming platform for
+mobile/cloud applications.
+</p>
+
+<p>
   Before starting my PhD, I worked for three years
   at <a href="http://www.vmware.com/">VMware</a> in the
   virtual machine monitor group on VM checkpointing, memory
