updating webpage and fonts

--- a/index.html
+++ b/index.html
@@ -27,39 +27,41 @@ notitle: true
 <!-- <p><a href="{{ site.baseurl }}/oldnews.html">Older news posts&hellip;</a></p> -->
 <!-- {% endif %} -->
 
-
-<div class="inset-image pull-left">
-  <img src="img/facebook-photo.jpg" alt="Photo of Me" class="img-rounded
-                                                 img-responsive">
+<div class="clearfix headline">
+  <div class="col-sm-4">
+    <img src="{{ site.base }}/img/me-cropped.jpg" alt="Photo of Me"
+         class="img-responsive">
+  </div>
+  <div class="col-sm-8"  style="padding-top:6px;">
+      I am a second-year PhD student in the
+      <a href="http://cs.washington.edu">Computer Science and
+        Engineering</a> department at
+      the <a href="http://washington.edu">University of Washington</a>.
+  </div>
 </div>
-<h3 style="font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
-           color:#333">I am a PhD student at the University of
-  Washington working
-  with <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
-  Levy</a>
-  and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
-  Krishnamurthy</a> in the Systems and Networking group. My research
-  interest is primarily in computer systems, especially operating
-  systems and distributed systems.
-</h3>
-<br />
+
 <p>
-My current research focuses on systems for large-scale, distributed
-applications. I am working on several projects in this area, including
-a new protocol to provide high-performance transactions in distributed
-storage systems, and a flexible, distributed programming platform for
-mobile/cloud applications.
+I work
+with <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
+Levy</a>
+and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
+Krishnamurthy</a> in
+the <a href="https://www.cs.washington.edu/research/systems/">Systems
+and Networking Lab</a>.  My current research focuses on systems for
+large-scale, distributed applications. I am working on several
+projects in this area, including a new protocol to provide
+high-performance transactions in distributed storage systems, and a
+flexible, distributed programming platform for mobile/cloud
+applications.
 </p>
 
 <p>
   Before starting my PhD, I worked for three years
-  at <a href="http://www.vmware.com/">VMware</a> in the
-  virtual machine monitor group on VM checkpointing, memory
-  management and page sharing.</p>
-
-<p> I received my B.S. in computer science
-  from <a href="http://www.mit.edu">MIT</a> in 2008 and my
-  M. Eng. in 2009. My master's thesis was advised by 
+  at <a href="http://www.vmware.com/">VMware</a> in the virtual
+  machine monitor group on VM checkpointing, memory management and
+  page sharing. I received my B.S. in computer science
+  from <a href="http://www.mit.edu">MIT</a> in 2008 and my M. Eng. in
+  2009. My master's thesis was advised by
   <a href="http://pdos.csail.mit.edu/~strib/">Jeremy
 	Stribling</a>, <a href="http://pdos.csail.mit.edu/rtm/">Robert
 	Morris</a> and
@@ -74,5 +76,3 @@ mobile/cloud applications.
   and I like to cook, travel and occasionally do computer
   science together.
 </p>
-
-
