--- a/research/index.html
+++ b/research/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-title: Current Research
+title: Research
+notitle: true
 ---
+<h2>Current Research</h2>
 <p>
 My PhD research broadly covers operating systems and distributed
 systems for large-scale, distributed applications. I am working on
@@ -17,7 +19,7 @@ control. By taking advantage of <em>cross-protocol</em> optimizations,
 OR-2PC is able to commit transactions in a single round-trip with the
 same consistency guarantees and transaction model as conventional
 protocols.<br />
-<a href="research/or-2pc/index.html">More about OR-2PC
+<a href="{{ site.base }}/research/or-2pc/index.html">More about OR-2PC
   <i class="fa fa-chevron-circle-right"></i></a>
 </p>
 
