--- a/index.html
+++ b/index.html
@@ -4,29 +4,6 @@ title: Home
 notitle: true
 ---
 
-<!-- <h2>News</h2> -->
-<!-- <ul class="news list-unstyled"> -->
-<!-- {% for post in site.posts limit: site.front_page_news %} -->
-<!--     {% if post.shortnews %} -->
-<!--         <li class="shortnews"> -->
-<!--             <span class="date">{{ post.date | date_to_long_string }}</span> -->
-<!--             {{ post.content }} -->
-<!--         </li> -->
-<!--     {% else %} -->
-<!--         <li class="bloglink"> -->
-<!--             <span class="date">{{ post.date | date_to_long_string }}</span> -->
-<!--             <a href="{{ post.url }}">&raquo; {{ post.title }}</a> -->
-<!--         </li> -->
-<!--     {% endif %} -->
-<!-- {% endfor %} -->
-<!-- </ul> -->
-<!-- {% assign numposts = site.posts | size %} -->
-<!-- {% if numposts >= site.front_page_news %} -->
-<!-- <p><a href="{{ site.baseurl }}/blog/">Older posts&hellip;</a></p> -->
-<!-- {% else %} -->
-<!-- <p><a href="{{ site.baseurl }}/oldnews.html">Older news posts&hellip;</a></p> -->
-<!-- {% endif %} -->
-
 <div class="clearfix headline">
   <div class="col-sm-4">
     <img src="{{ site.base }}/img/me-cropped.jpg" alt="Photo of Me"
@@ -76,3 +53,21 @@ applications.
   and I like to cook, travel and occasionally do computer
   science together.
 </p>
+
+<h2>News & Happenings</h2>
+<ul class="news list-unstyled">
+{% for post in site.posts limit: site.front_page_news %}
+    {% if post.shortnews %}
+        <li class="shortnews">
+            <span class="date">{{ post.date | date_to_long_string }}</span>
+            {{ post.content }}
+        </li>
+    {% else %}
+        <li class="bloglink">
+            <span class="date">{{ post.date | date_to_long_string }}</span>
+            <a href="{{ post.url }}">&raquo; {{ post.title }}</a>
+        </li>
+    {% endif %}
+{% endfor %}
+</ul>
+<p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
