--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@ applications.
   science together.
 </p>
 
-<h2>News & Happenings</h2>
-<ul class="news list-unstyled">
-{% for post in site.posts limit: site.front_page_news %}
-    {% if post.shortnews %}
-        <li class="shortnews">
-            <span class="date">{{ post.date | date_to_long_string }}</span>
-            {{ post.content }}
-        </li>
-    {% else %}
-        <li class="bloglink">
-            <span class="date">{{ post.date | date_to_long_string }}</span>
-            <a href="{{ post.url }}">&raquo; {{ post.title }}</a>
-        </li>
-    {% endif %}
-{% endfor %}
-</ul>
-<p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
+<!-- <h4>News & Happenings</h4> -->
+<!-- <ul class="news list-unstyled"> -->
+<!--   {% for post in site.posts limit: site.front_page_news %} -->
+<!--   {% if post.shortnews %} -->
+<!--   <li class="shortnews"> -->
+<!--     <span class="date">{{ post.date | date_to_long_string }}</span> -->
+<!--     {{ post.content }} -->
+<!--   </li> -->
+<!--   {% else %} -->
+<!--   <li class="bloglink"> -->
+<!--     <span class="date">{{ post.date | date_to_long_string }}</span> -->
+<!--     <a href="{{ post.url }}">&raquo; {{ post.title }}</a> -->
+<!--   </li> -->
+<!--   {% endif %} -->
+<!--   {% endfor %} -->
+<!-- </ul> -->
+<!-- <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p> -->
