--- a/research/index.html
+++ b/research/index.html
@@ -70,7 +70,8 @@ restore for VMware Workstation.
 <h2>Research at MIT</h2>
 <p>
 I worked on a number of research projects with great people while at
-MIT as an undergrad and MEng. Some notable projects that I worked on:
+MIT as an undergrad and MEng student. Some notable projects that I
+worked on:
 </p>
 <p><b>TxCache</b> is a distributed, in-memory, application-level cache
 with transactional consistency and automated cache invalidations. By
