updating main page and cv

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ notitle: true
   <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of Me"
        class="inset-img">
 </div>
-
+<div class="clearfix visible-xs"></div>
 <p class="lead">  I am a PhD student in the
   <a href="http://cs.washington.edu">Computer Science and
     Engineering</a> department at
@@ -16,16 +16,20 @@ notitle: true
 </p>
 
 <p>
-  I work
-  with <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
+  I work with
+  by <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
   Levy</a>
   and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
   Krishnamurthy</a> in
   the <a href="https://syslab.cs.washington.edu/">Computer Systems
   Lab</a>.  My current research focuses on systems for large-scale,
   distributed applications, including distributed runtime systems and
-  transactional storage systems. I received my M.S. in computer
-  science from UW in 2013.
+  transactional storage systems.
+<p>
+I am funded by a <a href="http://www.nsfgrfp.org/">National Science
+  Foundation Fellowship</a> as well as
+  an <a href="http://www.seattlearcsfoundation.org/">ARCS Foundation
+  Fellowship</a>. I received my M.S. in computer science from UW in 2013. 
 </p>
 
 <p>
@@ -68,30 +72,44 @@ notitle: true
 </ul>
 <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
 
+
 <h2>Contact Information</h2>
+<div class="row">
+<div class="col-sm-7">
 <table class="table table-condensed table-no-border">
   <tbody>
     <tr>
-      <td><i class="fa-fw fa fa-envelope-o"></i> <b>Email: </b></td>
+      <td><i class="fa-fw fa fa-envelope"></i> <b>Email: </b></td>
       <td>iyzhang@cs.washington.edu</td>
     </tr>
     <tr>
-      <td><i class="fa-fw fa fa-building-o"></i> <b>Office: </b></td>
+      <td nowrap><i class="fa-fw fa fa-location-arrow"></i> <b>Address: </b></td>
+      <td>185 Stevens Way, Seattle, WA 98195</td>
+    </tr>
+    <!-- <tr> -->
+    <!--   <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td> -->
+    <!--   <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td> -->
+    <!-- <tr> -->
+  </tbody>
+</table>
+</div>
+<div class="col-sm-5">
+<table class="table table-condensed table-no-border">
+  <tbody>
+    <tr>
+      <td><i class="fa-fw fa fa-building"></i> <b>Office: </b></td>
       <td><a href="https://www.cs.washington.edu/contact/">Allen
       Center</a>, Room 591</td>
-    </tr>
-    <tr>
-      <td><i class="fa-fw fa fa-location-arrow"></i> <b>Address: </b></td>
-      <td>185 Stevens Way, Seattle, WA 98195</td>
     </tr>
     <tr>
       <td><i class="fa-fw fa fa-phone"></i> <b>Phone: </b></td> 
       <td>206-685-1963</td>
     </tr>
-    <tr>
-      <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td>
-      <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td>
-    <tr>
+    <!-- <tr> -->
+    <!--   <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td> -->
+    <!--   <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td> -->
+    <!-- <tr> -->
   </tbody>
 </table>
-
+</div>
+</div>
