--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ notitle: true
 
 <p>
   I work with
-  by <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
+  <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
   Levy</a>
   and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
   Krishnamurthy</a> in
@@ -54,25 +54,6 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
   together.
 </p>
     
-<h2>News & Happenings</h2>
-<ul class="news list-unstyled">
-  {% for post in site.posts limit: site.front_page_news %}
-  {% if post.shortnews %}
-  <li class="shortnews">
-    <span class="date">{{ post.date | date_to_long_string }}</span>
-    {{ post.content }}
-  </li>
-  {% else %}
-  <li class="bloglink">
-    <span class="date">{{ post.date | date_to_long_string }}</span>
-    <a href="{{ post.url }}">&raquo; {{ post.title }}</a>
-  </li>
-  {% endif %}
-  {% endfor %}
-</ul>
-<p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
-
-
 <h2>Contact Information</h2>
 <div class="row">
 <div class="col-sm-7">
@@ -113,3 +94,22 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
 </table>
 </div>
 </div>
+
+<!-- <h2>News & Happenings</h2> -->
+<!-- <ul class="news list-unstyled"> -->
+<!--   {% for post in site.posts limit: site.front_page_news %} -->
+<!--   {% if post.shortnews %} -->
+<!--   <li class="shortnews"> -->
+<!--     <span class="date">{{ post.date | date_to_long_string }}</span> -->
+<!--     {{ post.content }} -->
+<!--   </li> -->
+<!--   {% else %} -->
+<!--   <li class="bloglink"> -->
+<!--     <span class="date">{{ post.date | date_to_long_string }}</span> -->
+<!--     <a href="{{ post.url }}">&raquo; {{ post.title }}</a> -->
+<!--   </li> -->
+<!--   {% endif %} -->
+<!--   {% endfor %} -->
+<!-- </ul> -->
+<!-- <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p> -->
+
