--- a/research/index.html
+++ b/research/index.html
@@ -31,7 +31,7 @@ data collected on mobile devices (e.g., photos, GPS location).  Agate
 combines aspects of access control and information flow control to
 allow applications to share user data in application-specific ways,
 while enforcing user policies without trusting the application or the
-application programmer.
+application programmer. <br />
 <a href="http://sapphire.cs.washington.edu/research/project/agate.html">More about Agate
   <i class="fa fa-chevron-circle-right"></i></a>
 </p>
