--- a/research/index.html
+++ b/research/index.html
@@ -15,7 +15,7 @@ ongoing projects are:
 <p>
 <b>TAPIR</b> &mdash; the Transactional Application Protocol for Inconsistent
 Replication &mdash; is a new protocol for linearizable
-distributed transaction built using replication with <em>no
+distributed transactions built using replication with <em>no
 consistency guarantees</em>. By eliminating consistency, and thus
 coordination, from the replication layer, TAPIR provides the same
 transaction model and consistency guarantees as existing systems like
