adding some missing things?

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
 <p>
   Before starting my PhD, I worked for three years
   at <a href="http://www.vmware.com/">VMware</a> in the virtual
-  machine monitor group on VM checkpointing, memory management and
-  page sharing. I received my B.S. in computer science
+  machine monitor group. I received my B.S. in computer science
   from <a href="http://www.mit.edu">MIT</a> in 2008 and my M. Eng. in
-  2009.  At MIT, I was advised by
-  <a href="http://pdos.csail.mit.edu/~strib/">Jeremy
-	Stribling</a>, <a href="http://pdos.csail.mit.edu/~kaashoek/">Frans
-	Kaashoek</a> and <a href="http://pdos.csail.mit.edu/rtm/">Robert
-	Morris</a>. 
+  2009.  <!-- At MIT, I was advised by -->
+  <!-- <a href="http://pdos.csail.mit.edu/~strib/">Jeremy -->
+  <!--   Stribling</a>, <a href="http://pdos.csail.mit.edu/~kaashoek/">Frans -->
+  <!--   Kaashoek</a> and <a href="http://pdos.csail.mit.edu/rtm/">Robert -->
+  <!--   Morris</a>. --> 
 </p>
     
 <p>
