updating layout on mobile devices

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@ title: Home
 notitle: true
 ---
 
-<div class="pull-left">
+<div class="inset-img pull-left">
   <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of Me"
-       class="inset-img">
+       class="img-responsive">
 </div>
-<div class="clearfix visible-xs"></div>
 <p class="lead">  I am a PhD student in the
   <a href="http://cs.washington.edu">Computer Science and
     Engineering</a> department at
