adding some papers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ notitle: true
 ---
 
 <div class="inset-img pull-left">
-  <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of Me"
+  <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of me"
        class="img-responsive">
 </div>
 <p class="lead">  I am a PhD student in the
@@ -34,7 +34,7 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
 <p>
   Before starting my PhD, I worked for three years
   at <a href="http://www.vmware.com/">VMware</a> in the virtual
-  machine monitor group. I received my B.S. in computer science
+  machine monitor group. I received my S.B. in computer science
   from <a href="http://www.mit.edu">MIT</a> in 2008 and my M. Eng. in
   2009.  <!-- At MIT, I was advised by -->
   <!-- <a href="http://pdos.csail.mit.edu/~strib/">Jeremy -->
