adding code pointer to my index page

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
       <td><a href="https://www.cs.washington.edu/contact/">Allen
       Center</a>, Room 591</td>
     </tr>
+    <!-- <tr> -->
+    <!--   <td><i class="fa-fw fa fa-phone"></i> <b>Phone: </b></td>  -->
+    <!--   <td>206-685-1963</td> -->
+    <!-- </tr> -->
     <tr>
-      <td><i class="fa-fw fa fa-phone"></i> <b>Phone: </b></td> 
-      <td>206-685-1963</td>
-    </tr>
-    <!-- <tr> -->
-    <!--   <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td> -->
-    <!--   <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td> -->
-    <!-- <tr> -->
+      <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td>
+      <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td>
+    <tr>
   </tbody>
 </table>
 </div>
