--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@ title: Home
 notitle: true
 ---
 
-<div class="inset-img pull-left">
-  <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of me"
-       class="img-responsive">
-</div>
-<p class="lead">  I am a PhD student in the
-  <a href="http://cs.washington.edu">Computer Science and
-    Engineering</a> department at
-  the <a href="http://washington.edu">University of Washington</a>.
-</p>
+<!-- <p>  I am a PhD student in the -->
+<!--   <a href="http://cs.washington.edu">Computer Science and -->
+<!--     Engineering</a> department at -->
+<!--   the <a href="http://washington.edu">University of Washington</a>. -->
+<!-- </p> -->
 
+<h3>Bio & Background</h3>
 <p>
   I work with
   <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
@@ -52,7 +49,7 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
   together.
 </p>
 
-<h2>News & Happenings</h2>
+<h3>News & Happenings</h3>
 <ul class="news list-unstyled">
   {% for post in site.posts limit: site.front_page_news %}
   {% if post.shortnews %}
@@ -69,47 +66,3 @@ I am funded by a <a href="http://www.nsfgrfp.org/">National Science
   {% endfor %}
 </ul>
 <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
-
-
-    
-<h2>Contact Information</h2>
-<div class="row">
-<div class="col-sm-7">
-<table class="table table-condensed table-no-border">
-  <tbody>
-    <tr>
-      <td><i class="fa-fw fa fa-envelope"></i> <b>Email: </b></td>
-      <td>iyzhang@cs.washington.edu</td>
-    </tr>
-    <tr>
-      <td nowrap><i class="fa-fw fa fa-location-arrow"></i> <b>Address: </b></td>
-      <td>185 Stevens Way, Seattle, WA 98195</td>
-    </tr>
-    <!-- <tr> -->
-    <!--   <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td> -->
-    <!--   <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td> -->
-    <!-- <tr> -->
-  </tbody>
-</table>
-</div>
-<div class="col-sm-5">
-<table class="table table-condensed table-no-border">
-  <tbody>
-    <tr>
-      <td><i class="fa-fw fa fa-building"></i> <b>Office: </b></td>
-      <td><a href="https://www.cs.washington.edu/contact/">Allen
-      Center</a>, Room 591</td>
-    </tr>
-    <!-- <tr> -->
-    <!--   <td><i class="fa-fw fa fa-phone"></i> <b>Phone: </b></td>  -->
-    <!--   <td>206-685-1963</td> -->
-    <!-- </tr> -->
-    <tr>
-      <td><i class="fa-fw fa fa-github-alt"></i> <b>Code: </b></td>
-      <td><a href="https://github.com/iyzhang/">iyzhang@github</a></td>
-    <tr>
-  </tbody>
-</table>
-</div>
-</div>
-
